2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* Makefile.am: Forgot to remove gnome-doc-utils from the Makefile.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac: There is no need for gnome-doc-utils.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac: Add configure bits missing from last commit.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* Makefile.am:
	* autogen.sh:
	Require at least intltool-0.40.0.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac: Fix Bugzilla URI and remove unneeded dependencies
	on libglade and GnomeVFS.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/pythonconsole/*:
	Add pythonconsole plugin based on the gedit plugin of the same name.
	Fixes bug #462338 (Diego Escalante Urrelo, Francisco Rojas).

2008-10-17  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/champlain/eog-champlain-plugin.c:
	Update plugin to work with latest libchamplain (Pierre-Luc Beaudoin).

2008-10-12  Lucas Rocha  <lucasr@gnome.org>

	* configure.ac, plugins/champlain/*: new geo tagging plugin based on
	libchamplain. Patch from Pierre-Luc Beaudoin <pierre-luc@pierlux.com>.

2008-04-08  Lucas Rocha  <lucasr@gnome.org>

	* configure.ac: property check postr program and disable plugin
	accordingly in case the program is not installed.

2008-03-17  Lucas Rocha  <lucasr@gnome.org>

	* configure.ac, plugins/Makefile.am, plugins/fullscreen/*,
	plugins/reload/*: moved fullscreen and reload to main eog
	module as default plugins.

2007-11-13  Lucas Rocha  <lucasr@gnome.org>

	* reload/eog-reload-plugin.c, reload/eog-reload-plugin.h,
	reload/reload.eog-plugin.desktop.in, reload/Makefile.am, configure.ac: 
	new "Fullscreen with double-click" plugin. Fixes bug #478695.

2007-11-13  Lucas Rocha  <lucasr@gnome.org>

	* reload/eog-reload-plugin.c, reload/eog-reload-plugin.h,
	reload/reload.eog-plugin.desktop.in, reload/Makefile.am, configure.ac: 