@@ -1,0 +1,9 @@
+[Eog Plugin]
+Loader=python
+Module=slideshowshuffle
+IAge=2
+_Name=Slideshow Shuffle
+Icon=media-playlist-shuffle
+_Description=Shuffles images in slideshow mode
+Authors=Johannes Marbach <jm@rapidrabbit.de>
+Copyright=Copyright © 2008 Johannes Marbach
